@@ -8,6 +8,7 @@ import cz.jiripinkas.jba.repository.BlogRepository;
 import cz.jiripinkas.jba.repository.ItemRepository;
 import cz.jiripinkas.jba.repository.UserRepository;
 import cz.jiripinkas.jba.util.MyUtil;
+import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -165,7 +166,7 @@ public class BlogService {
 		} else {
 			byte[] icon = blog.get().getIcon();
 			if (icon == null) {
-				return getClass().getResourceAsStream("/generic-blog.png").readAllBytes();
+				return IOUtils.toByteArray(getClass().getResourceAsStream("/generic-blog.png"));
 			}
 			return icon;
 		}
